Fix contrast ratio in all widths
fixes #704

--- a/wdn/templates_4.0/less/layouts/breadcrumbs.less
+++ b/wdn/templates_4.0/less/layouts/breadcrumbs.less
@@ -7,6 +7,10 @@
         width: 60rem;
     }
     
+    h3 {
+        color: #fff;
+    }
+    
     li {
         display: inline-block;
         text-transform: none;
